<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:fontFamily="@font/pt_sans_bold"
        android:textSize="@dimen/product_name_list_text_size"
        tools:text="Product name" />

    <TextView
        android:id="@+id/price_text"
        android:layout_width="@dimen/hundred_dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_name"
        app:fontFamily="@font/pt_sans_bold"
        android:textAllCaps="true"
        android:textSize="@dimen/list_subtext_size"
        android:text="@string/price_text" />

    <TextView
        android:id="@+id/product_price"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_name"
        android:layout_toRightOf="@id/price_text"
        android:layout_toEndOf="@id/price_text"
        app:fontFamily="@font/pt_sans"
        android:textSize="@dimen/list_subtext_size"
        tools:text="12.99" />

    <TextView
        android:id="@+id/quantity_text"
        android:layout_width="@dimen/hundred_dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/price_text"
        app:fontFamily="@font/pt_sans_bold"
        android:textSize="@dimen/list_subtext_size"
        android:textAllCaps="true"
        android:text="@string/quantity_text" />

    <TextView
        android:id="@+id/product_quantity"
        android:layout_width="@dimen/hundred_dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/price_text"
        app:fontFamily="@font/pt_sans"
        android:textSize="@dimen/list_subtext_size"
        android:layout_toRightOf="@id/quantity_text"
        android:layout_toEndOf="@id/quantity_text"
        tools:text="100" />

    <ImageView
        android:id="@+id/sale_btn"
        android:layout_width="@dimen/icon_width_height_40"
        android:layout_height="@dimen/icon_width_height_40"
        android:layout_below="@id/product_name"
        android:layout_toRightOf="@id/product_price"
        android:layout_toEndOf="@id/product_price"
        android:src="@drawable/ic_attach_money_white_24dp"
        android:background="@drawable/background_circle"
        android:layout_marginTop="@dimen/four_dp"
        android:layout_marginLeft="@dimen/twenty_dp"
        android:layout_marginStart="@dimen/twenty_dp"
        android:padding="@dimen/eight_dp"
        android:contentDescription="@string/sale_btn_description"/>

</RelativeLayout>